@@ -20,9 +20,8 @@
 		<logback.version>1.1.3</logback.version>
 		<vaadin.version>7.7.3</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-		<jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
 		<slf4j.version>1.7.12</slf4j.version>
-		<madura.vaadin.version>3.2.5</madura.vaadin.version>
+		<madura.vaadin.version>3.3.0</madura.vaadin.version>
    		<timestamp>${maven.build.timestamp}</timestamp>
    		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 	</properties>
@@ -105,7 +104,7 @@
 			<dependency>
 				<groupId>nz.co.senanque</groupId>
 				<artifactId>madura-rules</artifactId>
-				<version>3.2.0</version>
+				<version>3.3.5</version>
 			</dependency>
 
 			<dependency>
@@ -126,7 +125,7 @@
 			<dependency>
 				<groupId>nz.co.senanque</groupId>
 				<artifactId>madura-bundle</artifactId>
-				<version>4.4.0</version>
+				<version>4.5.9</version>
 			</dependency>
 
 			<dependency>
@@ -196,48 +195,6 @@
 							<id>attach-javadocs</id>
 							<goals>
 								<goal>jar</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.jetty</groupId>
-					<artifactId>jetty-maven-plugin</artifactId>
-					<version>${jetty.plugin.version}</version>
-					<configuration>
-						<jvmArgs>-XX:PermSize=128M -XX:MaxPermSize=256M</jvmArgs>
-					    <scanIntervalSeconds>2</scanIntervalSeconds>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.kuali.maven.plugins</groupId>
-					<artifactId>properties-maven-plugin</artifactId>
-					<version>1.1.9</version>
-					<executions>
-						<execution>
-							<phase>initialize</phase>
-							<goals>
-								<goal>read-project-properties</goal>
-							</goals>
-							<configuration>
-								<locations>
-									<location>${HOME}/madura.properties</location>
-								</locations>
-								<quiet>true</quiet>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.4</version>
-					<executions>
-						<execution>
-							<id>sign-artifacts</id>
-							<phase>verify</phase>
-							<goals>
-								<goal>sign</goal>
 							</goals>
 						</execution>
 					</executions>
@@ -314,11 +271,6 @@
 	                    </execution>
 	                </executions>
 				</plugin>
-	            <plugin>
-	                <groupId>org.mortbay.jetty</groupId>
-	                <artifactId>jetty-maven-plugin</artifactId>
-	                <version>${jetty.plugin.version}</version>
-	            </plugin>
 	    		<plugin>
 					<groupId>nz.co.senanque</groupId>
 					<artifactId>madura-rules-maven-plugin</artifactId>
@@ -414,4 +366,38 @@
   		</plugins>
   	</pluginManagement>
   </build>
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.3</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
